# Negotiation-Agent

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.toml  requirements-deploy.txt  requirements.txt
.claude/: settings.json
.claude/agents/: README.md
.claude/rules/: README.md
.github/workflows/: ci.yml
data/: kb_index.json  kb_manifest.json
demo/: README.md  fleet.html  fleet.json  peitho-v2.html  peitho.html
docs/: COMPETITIVE-EDGE.md  DEPLOY.md  PHASE5-DURABILITY.md  REDESIGN-SPEC.md  contract-intelligence-architecture.md  peitho-v2-architecture.md  v1-architecture.md
docs/kb/: batna-and-reservation-value.md  engineering-construction-negotiation.md  facility-services-negotiation.md  financial-insurance-negotiation.md  hr-services-negotiation.md  hr-staffing-agency-negotiation.md  installation-services-negotiation.md  interests-not-positions.md  it-hardware-negotiation.md  logistics-freight-negotiation.md  marketing-agency-negotiation.md  objective-criteria.md  options-for-mutual-gain.md  other-business-services-negotiation.md  real-estate-lease-negotiation.md  repair-maintenance-negotiation.md  telecom-services-negotiation.md  telecoms-equipment-negotiation.md  training-education-negotiation.md  travel-catering-negotiation.md
scripts/: gen_tailspend_demo.py
src/negotiation_agent/: __init__.py  anchor.py  api.py  ask.py  baseline.py  brief.py  checklist.py  dossier.py  engine.py  envelope.py  extract_text.py  fallback.py  gate.py  guard.py  intake.py  intelligence.py  llm.py  mandate_factory.py  negotiate.py  numbers.py  opponent_model.py  outcomes.py  packages.py  prepare.py  priors.py  research.py  scan.py  scan_client.py  shaper.py  signing.py  strategy.py  supplier_model.py  termination.py  value.py  wire.py
src/negotiation_agent/knowledge/: __init__.py  bm25.py  build.py  category.py  contracts.py  cpv.py  ingest.py  manifest.py  retrieve.py  tone.py  unspsc.py
src/negotiation_agent/simulator/: __init__.py  cli.py  loop.py  metrics.py  personas.py  scenarios.py  supplier.py
tests/: conftest.py  test_anchor.py  test_api_context.py  test_api_extract.py  test_api_intel.py  test_api_mode.py  test_api_negotiate.py  test_api_terminate.py  test_baseline.py  test_brief.py  test_checklist.py  test_cli_and_seams.py  test_dossier.py  test_draft_budget.py  test_engine.py  test_extract_text.py  test_fold_invariant.py  test_gate.py  test_guard.py  test_intake.py  test_intelligence.py  test_knowledge.py  test_learning.py  test_llm_prompt_safety.py  test_mandate_factory.py  test_negotiate.py  test_opponent_model.py  test_packages.py  test_prep.py  test_prepare.py  test_reference_metrics.py  test_research.py  test_resolve.py  test_scan.py  test_scan_client.py  test_scan_endpoint.py  test_shaper.py  test_signing.py  test_simulate.py  test_simulator.py  (+4 more)
tests/fixtures/: hades_response.json  reference_metrics.json
