[project]
name = "negotiation-agent"
version = "0.1.0"
description = "Deterministic procurement negotiation engine with LLM-advised counteroffers (v0: engine + simulator + evals)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eugen" }]
keywords = [
    "negotiation", "procurement", "boulware", "logrolling",
    "multi-agent", "game-theory", "deterministic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Upper bound: the reference eval numbers are produced under pydantic 2.x;
    # pin below 3.0 so a fresh clone can't resolve a major that shifts them.
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/eugnmueller-87/Negotiation-Agent"
Repository = "https://github.com/eugnmueller-87/Negotiation-Agent"

[project.scripts]
neg-sim = "negotiation_agent.simulator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
negotiation_agent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Keep bare `pytest` fast; coverage is enforced in CI (see .github/workflows/ci.yml).
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["negotiation_agent"]

[tool.coverage.report]
show_missing = true
# The engine is the IP — hold the core to a high bar.
fail_under = 90

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
