[project]
name = "negotiation-agent"
version = "0.1.0"
description = "Deterministic procurement negotiation engine with LLM-advised counteroffers (v0: engine + simulator + evals)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eugen" }]
keywords = [
    "negotiation", "procurement", "boulware", "logrolling",
    "multi-agent", "game-theory", "deterministic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Upper bound: the reference eval numbers are produced under pydantic 2.x;
    # pin below 3.0 so a fresh clone can't resolve a major that shifts them.
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]
# Optional HTTP surface (the v1 /prepare endpoint). Not needed for the engine,
# the simulator, or the eval matrix — only to serve negotiation_agent.api:app.
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/eugnmueller-87/Negotiation-Agent"
Repository = "https://github.com/eugnmueller-87/Negotiation-Agent"

[project.scripts]
neg-sim = "negotiation_agent.simulator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
negotiation_agent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Keep bare `pytest` fast; coverage is enforced in CI (see .github/workflows/ci.yml).
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["negotiation_agent"]
# The HTTP adapter needs the optional [web] extra to import; it's covered by its
# own smoke test only when FastAPI is present, not in the core coverage gate.
omit = ["*/negotiation_agent/api.py"]

[tool.coverage.report]
show_missing = true
# The engine is the IP — hold the core to a high bar.
fail_under = 90

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src"]
# The HTTP adapter type-checks only when the optional [web] extra is installed
# (it imports FastAPI). CI runs mypy without that extra, so exclude it here; it is
# checked in the web-extra job. The core stays strict-clean with zero web deps.
exclude = ['src/negotiation_agent/api\.py']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
