[project]
name = "negotiation-agent"
version = "0.1.0"
description = "Deterministic procurement negotiation engine with LLM-advised counteroffers (v0: engine + simulator + evals)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Eugen" }]
keywords = [
    "negotiation", "procurement", "boulware", "logrolling",
    "multi-agent", "game-theory", "deterministic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    # Upper bound: the reference eval numbers are produced under pydantic 2.x;
    # pin below 3.0 so a fresh clone can't resolve a major that shifts them.
    "pydantic>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
]
# Optional HTTP surface (the /prepare + /negotiate endpoints) and the live-LLM
# negotiation layer. Not needed for the engine, the simulator, or the eval matrix —
# only to serve negotiation_agent.api:app. `anthropic` drafts the buyer/supplier
# prose server-side; the key is read from env, never committed.
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "anthropic>=0.40",
    # Contract file → text: pure-Python PDF text-layer extraction (no system binary,
    # deploys clean on Nixpacks) and Word .docx. Text-layer only — a scanned/image PDF
    # yields no text and is warned, not OCR'd. python-multipart lets FastAPI accept the
    # file upload (UploadFile).
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    # Contract PDF → stable, deep-linkable text ANCHORS for the due-diligence cockpit
    # (negotiation_agent.anchor): PyMuPDF gives geometric text blocks with a stable per-page
    # block index, so every finding's quote can be verified back to a specific block. Single
    # wheel, no system binary, Nixpacks-clean. pypdf (above) stays the flat-text extractor.
    "pymupdf>=1.24",
]

[project.urls]
Homepage = "https://github.com/eugnmueller-87/Negotiation-Agent"
Repository = "https://github.com/eugnmueller-87/Negotiation-Agent"

[project.scripts]
neg-sim = "negotiation_agent.simulator.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
negotiation_agent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Keep bare `pytest` fast; coverage is enforced in CI (see .github/workflows/ci.yml).
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["negotiation_agent"]
# The HTTP adapter and the LLM drafting layer need the optional [web] extra to
# import; they're covered by the endpoint smoke tests only when FastAPI/anthropic
# are present, not in the core coverage gate.
omit = ["*/negotiation_agent/api.py", "*/negotiation_agent/llm.py"]

[tool.coverage.report]
show_missing = true
# The engine is the IP — hold the core to a high bar.
fail_under = 90

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
files = ["src"]
# The HTTP adapter and LLM layer type-check only with the optional [web] extra
# installed (they import FastAPI / anthropic). CI runs mypy without that extra, so
# exclude them here; they're checked in the web-extra job. The core — including the
# stateless orchestration in negotiate.py — stays strict-clean with zero web deps.
exclude = ['src/negotiation_agent/(api|llm)\.py']

# The Anthropic SDK doesn't ship a stub mypy resolves here; ignore its missing
# import in the web-extra job (the import is guarded and only runs with the extra).
[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*", "fitz"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# These are data modules: realistic contract clauses, checklist prose, and negotiation-position
# text. Long string literals there are content, not code smell — splitting hurts readability.
"src/negotiation_agent/dossier.py" = ["E501"]
"src/negotiation_agent/checklist.py" = ["E501"]
